<resources>
    <string name="app_name">MEI My Social</string>
    <string name="bt_login">Login</string>
    <string name="title_activity_add_momment">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_save">Save</string>
    <string name="btn_addmomment">Add a Moment</string>
    <string name="lb_title">Title</string>
    <string name="tv_country">Country</string>
    <string name="tv_city">City</string>
    <string name="tv_description">Description</string>
    <string name="tv_date">Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_title_header">Trips</string>
    <string name="tv_addtrip">Add Trip</string>
    <string name="tv_addmomment">Add Moment</string>
    <string name="tv_detail_trip">Trip</string>
    <string name="rb_happy">Já fui muito feliz aqui!</string>
    <string name="rb_never">Nunca tinha experimentado, estou maravilhado!</string>
    <string name="rb_mustgo">Esta vai direto para minha bucket list</string>
    <string name="tv_edittrip">Edit Trip</string>
    <string name="tv_mommentstitle">Moments</string>
    <string name="tv_title_header_search">Search Trips</string>
    <string name="btn_delete">Delete</string>
    <string name="tv_forget">Forgot your login details?</string>
    <string name="tv_clickhere">Click here.</string>
    <string name="tv_account">Don\'t have an account?</string>

    <string name="action_favorite">Favorit</string>
    <string name="action_markers">Favorit</string>
    <string name="action_settings">Menu</string>

    <!-- Moments -->
    <string name="tv_place">Place</string>
    <string name="tv_narrative">Narrative</string>
    <string name="username">Username</string>
    <string name="click_here">Click here.</string>
    <string name="tv_editmomment">Edit Moment</string>
    <string name="logout">Logout</string>


    <!--Side Menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Auth Facebok-->
    <string name="facebook_app_id">661461620706090</string>
    <string name="fb_login_protocol_scheme">fb661461620706090</string>

    <string name="photos_title">Photos</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude</string>
    <string name="title">Title</string>
    <string name="narrative">Narrative</string>
    <string name="place">Place</string>
    <string name="edit_moment">Edit Moment</string>
    <string name="action_home">Home</string>

</resources>
